--- a/public/formulario.css
+++ b/public/formulario.css
@@ -1,94 +1,5 @@
-:root{
-    --colorTextos: #000000;
-}
-
 body{
-    background: #5f2c82;  
-    /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #49a09d, #5f2c82);  
-    /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #49a09d, #5f2c82); 
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    height: 650px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-h1{
+    background-color: #13141C;
+    color:white;
     text-align: center;
-    font-weight: 700;
-}
-
-form{
-    background: #fff;
-    padding: 40 px 0;
-    box-shadow: 0 0 6px 0 rgba(255,255,255,0.8);
-    border-radius: 10px;
-}
-
-.form{
-    width: 100%;
-    margin: auto;
-}
-
-form .grupo{
-    position: relative;
-    margin: 45px;
-}
-
-input{
-    background-color: none;
-    color: #c6c6c6; 
-    font-size: 18px;
-    padding: 10 px 10px 10px 5px;
-    display: block;
-    width: 100%;
-    border: none;
-    border-bottom: 1px solid var(--colorTextos);
-}
-
-input:focus{
-    outline: none;
-    color: #5e5d5d;
-}
-
-.uno{
-    color: var(--colorTextos);
-    font-size: 16px;
-    position: absolute;
-    bottom: 5px;
-    left: 5px;
-    transition: 0.5s ease-in-out all;
-    pointer-events: none; 
-}
-
-.dos{
-    color: var(--colorTextos);
-    font-size: 16px;
-    position: absolute;
-    bottom: 45px;
-    right: 140px;
-    transition: 0.5s ease-in-out all;
-    pointer-events: none; 
-}
-input:focus~label{
-    top: -14px;
-    font-size: 12px;
-    color: #2196f3;
-}
-button{
-    background: #5f2c82;  
-    /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #49a09d, #5f2c82);  
-    /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #49a09d, #5f2c82); 
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    border: none;
-    display: block;
-    width: 80%;
-    margin: 10px auto;
-    color: #fff;
-    height: 40px;
-    font-size: 16px;
 }
